--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       line-height:1.7; 
     ">
       <p>天赐明明这么帅气，为什么没有女孩子陪他玩呢？</p>
-      <p>我的网站</p>
+      <a href="练习">html练习<a>
       <p>我的网站</p>
       <p>我的网站</p>
       <p>我的网站</p>
