--- a/练习.html
+++ b/练习.html
@@ -152,6 +152,7 @@
 你不要过来啊啊啊啊啊啊啊 啊啊！！！！！！！！！！！！！！我的脑袋要炸掉了！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！！</textarea
     >
     <video width="320" height="240" controls><source src="" type="" /></video>
+    <img src="./练习/积木块.png" alt="积木" height="50px" width="50px">
     <p>
       好吧，练习就到这里了看了一圈html标签，现在脑子已经短路了。只是能记得，有那样一个标签可以添加按钮、那样一个标签可以添加表格、那样一个标签可以做出下拉菜单、那样一个标签可以显示进度条、那样一个标签可以添加视频。。。。。。。
     </p>
